rust/foxglove/src/protocol/common/server/snapshots/foxglove__protocol__common__server__status__tests__encode.snap
---
source: rust/foxglove/src/protocol/common/server/status.rs
expression: message()
---
{
  "op": "status",
  "level": 1,
  "message": "Oh no"
}
