rust/foxglove/src/protocol/common/server/snapshots/foxglove__protocol__common__server__status__tests__encode_with_id.snap
---
source: rust/foxglove/src/protocol/common/server/status.rs
expression: message_with_id()
---
{
  "op": "status",
  "level": 1,
  "message": "Oh no",
  "id": "my-id"
}
